# Data-Science-Lab-12

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
configs/: config.toml
src/data/: validate.py
src/features/: engineer.py
src/models/: classify.py  train.py
src/reports/: generate_report.py
